[package]
name = "bevy_golf"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_state",
    "default_font",
    "vorbis",
    "webgl2",
    "x11",
    "png",
] }

# Both getrandom 0.2 (used by bevy_utils/uuid/rand) and getrandom 0.3 (used by
# ahash via runtime-rng) must have their browser-crypto feature enabled, or they
# will panic when the game tries to seed hashers / generate UUIDs in WASM.
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom    = { version = "0.2", features = ["js"] }
getrandom_v3 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }

# Optimize WASM output size
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

# Speed up compile times for dependencies in debug mode
[profile.dev.package."*"]
opt-level = 3
